# cos-cpp-sdk-v5

./: .code.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  cos-cpp-sdk.md  gen_lcov.sh  install-libpoco.sh  xmake.lua
demo/: CMakeLists.txt  config.json  cos_demo.cpp  stable_test.cpp
demo/auditing_demo/: auditing_demo.cpp
demo/bucket_op_demo/: bucket_acl_demo.cpp  bucket_cors_demo.cpp  bucket_domain_demo.cpp  bucket_intelligent_tiering_demo.cpp  bucket_inventory_demo.cpp  bucket_lifecycle_demo.cpp  bucket_location_demo.cpp  bucket_logging_demo.cpp  bucket_policy_demo.cpp  bucket_referer_demo.cpp  bucket_replication_demo.cpp  bucket_tagging_demo.cpp  bucket_versioning_demo.cpp  bucket_website_demo.cpp  delete_bucket_demo.cpp  get_bucket_demo.cpp  get_bucket_list_demo.cpp  head_bucket_demo.cpp  put_bucket_demo.cpp
demo/data_process_demo/: data_process_demo.cpp
demo/doc_process_demo/: doc_process_demo.cpp
demo/image_process_demo/: image_process_demo.cpp
demo/live_channel_demo/: live_channel_demo.cpp
demo/media_process_demo/: media_process_demo.cpp
demo/object_op_demo/: copy_move_object_demo.cpp  delete_object_demo.cpp  get_object_demo.cpp  get_object_url_demo.cpp  head_object_demo.cpp  limit_traffic_demo.cpp  list_multipart_upload_demo.cpp  multi_get_object_demo.cpp  multi_put_object_demo.cpp  multi_upload_object_demo.cpp  multi_upload_object_widechar_demo.cpp  put_get_delete_object_tagging_demo.cpp  put_get_object_acl_demo.cpp  put_object_demo.cpp  restore_object_demo.cpp  select_objec_demo.cpp
demo/test_file/: document.docx  douyin-00000.ts  douyin.m3u8  test.srt
include/: cos_api.h  cos_config.h  cos_defines.h  cos_params.h  cos_sys_config.h
include/Poco/: BUILD  mytest.cpp
include/json/: assertions.h  features.h  reader.h  value.h  version.h
include/op/: base_op.h  bucket_op.h  cos_result.h  file_copy_task.h  file_download_task.h  file_upload_task.h  object_op.h  service_op.h
include/rapidxml/1.13/: rapidxml_print.hpp
include/request/: auditing_req.h  base_req.h  bucket_req.h  data_process_req.h  object_req.h  service_req.h
include/response/: auditing_resp.h  base_resp.h  bucket_resp.h  data_process_resp.h  object_resp.h  service_resp.h
include/threadpool/boost/threadpool/: future.hpp  pool.hpp  pool_adaptors.hpp  scheduling_policies.hpp  shutdown_policies.hpp  size_policies.hpp  task_adaptors.hpp
include/threadpool/boost/threadpool/detail/: future.hpp  locking_ptr.hpp  pool_core.hpp  scope_guard.hpp  worker_thread.hpp
include/trsf/: async_context.h  async_task.h  transfer_handler.h
include/util/: .http_sender.h.swo  auth_tool.h  base_op_util.h  codec_util.h  crc64.h  file_util.h  http_sender.h  illegal_intercept.h  json_util.h  log_util.h  lru_cache.h  noncopyable.h  retry_util.h  semaphore.h  sha1.h  simple_dns_cache.h  simple_mutex.h  string_util.h  task.h  test_utils.h
libs/macOS/: libcossdk-shared.dylib
src/: CMakeLists.txt  cos_api.cpp  cos_config.cpp  cos_sys_config.cpp
src/op/: base_op.cpp  bucket_op.cpp  cos_result.cpp  file_copy_task.cpp  file_download_task.cpp  file_upload_task.cpp  object_op.cpp  service_op.cpp
src/request/: auditing_req.cpp  base_req.cpp  bucket_req.cpp  data_process_req.cpp  object_req.cpp
src/response/: .bucket_resp.cpp.swp  auditing_resp.cpp  base_resp.cpp  bucket_resp.cpp  data_process_resp.cpp  object_resp.cpp  service_resp.cpp
src/trsf/: transfer_handler.cpp
src/util/: auth_tool.cpp  base_op_util.cpp  codec_util.cpp  codec_util_high_openssl.cpp  crc64.cpp  file_util.cpp  http_sender.cpp  illegal_intercept.cpp  json_util.cpp  log_util.cpp  retry_util.cpp  sha1.cpp  simple_dns_cache.cpp  string_util.cpp  test_utils.cpp
tools/cos-speed-test/: Readme.txt  config.json  cos-speed-test.go
unittest/: CMakeLists.txt  auth_tool_test.cpp  bucket_op_test.cpp  common.h  live_channel_test.cpp  merge_xml_results.py  mock_server.h  object_op_test.cpp  object_request_test.cpp  object_response_test.cpp  test_utils.cpp  test_utils.h
unittest/conf/: config.json
unittest/src/: async_op_test.cpp  auditing_req_test.cpp  auth_tool_test.cpp  bucket_op_test.cpp  bucket_response_test.cpp  data_process_req_test.cpp  live_channel_test.cpp  mock_server.h  object_auditing_test.cpp  object_basic_op_test.cpp  object_copy_test.cpp  object_media_test.cpp  object_misc_test.cpp  object_multipart_test.cpp  object_op_retry_test.cpp  object_op_test.cpp  object_op_test_common.cpp  object_op_test_common.h  object_request_test.cpp  object_response_test.cpp  resumable_upload_test.cpp  test_utils.cpp  test_utils.h  util_test.cpp
unittest/testdata/: config.json  config_bucket_test.json
