project(cos-demo)

if (NOT ${OS_TYPE} STREQUAL "WINDOWS")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-function")
endif()

# ===================== bucket_op_demo =====================
file(GLOB get_bucket_list_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/get_bucket_list_demo.cpp")
file(GLOB delete_bucket_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/delete_bucket_demo.cpp")
file(GLOB head_bucket_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/head_bucket_demo.cpp")
file(GLOB put_bucket_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/put_bucket_demo.cpp")
file(GLOB get_bucket_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/get_bucket_demo.cpp")
file(GLOB bucket_versioning_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_versioning_demo.cpp")
file(GLOB bucket_replication_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_replication_demo.cpp")
file(GLOB bucket_lifecycle_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_lifecycle_demo.cpp")
file(GLOB bucket_acl_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_acl_demo.cpp")
file(GLOB bucket_policy_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_policy_demo.cpp")
file(GLOB bucket_cors_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_cors_demo.cpp")
file(GLOB bucket_logging_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_logging_demo.cpp")
file(GLOB bucket_domain_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_domain_demo.cpp")
file(GLOB bucket_website_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_website_demo.cpp")
file(GLOB bucket_tagging_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_tagging_demo.cpp")
file(GLOB bucket_inventory_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_inventory_demo.cpp")
file(GLOB bucket_referer_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_referer_demo.cpp")
file(GLOB bucket_location_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_location_demo.cpp")
file(GLOB bucket_intelligent_tiering_demo_src "${CMAKE_SOURCE_DIR}/demo/bucket_op_demo/bucket_intelligent_tiering_demo.cpp")

# ===================== object_op_demo =====================
file(GLOB put_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/put_object_demo.cpp")
file(GLOB get_object_url_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/get_object_url_demo.cpp")
file(GLOB head_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/head_object_demo.cpp")
file(GLOB get_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/get_object_demo.cpp")
file(GLOB delete_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/delete_object_demo.cpp")
file(GLOB put_get_object_acl_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/put_get_object_acl_demo.cpp")
file(GLOB put_get_delete_object_tagging_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/put_get_delete_object_tagging_demo.cpp")
file(GLOB restore_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/restore_object_demo.cpp")
file(GLOB copy_move_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/copy_move_object_demo.cpp")
file(GLOB multi_put_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/multi_put_object_demo.cpp")
file(GLOB multi_get_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/multi_get_object_demo.cpp")
file(GLOB select_objec_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/select_objec_demo.cpp")
file(GLOB multi_upload_object_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/multi_upload_object_demo.cpp")
file(GLOB list_multipart_upload_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/list_multipart_upload_demo.cpp")
file(GLOB limit_traffic_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/limit_traffic_demo.cpp")
file(GLOB multi_upload_object_widechar_demo_src "${CMAKE_SOURCE_DIR}/demo/object_op_demo/multi_upload_object_widechar_demo.cpp")

# ===================== 新增模块 demo =====================
file(GLOB live_channel_demo_src "${CMAKE_SOURCE_DIR}/demo/live_channel_demo/live_channel_demo.cpp")
file(GLOB image_process_demo_src "${CMAKE_SOURCE_DIR}/demo/image_process_demo/image_process_demo.cpp")
file(GLOB doc_process_demo_src "${CMAKE_SOURCE_DIR}/demo/doc_process_demo/doc_process_demo.cpp")
file(GLOB media_process_demo_src "${CMAKE_SOURCE_DIR}/demo/media_process_demo/media_process_demo.cpp")
file(GLOB data_process_demo_src "${CMAKE_SOURCE_DIR}/demo/data_process_demo/data_process_demo.cpp")
file(GLOB auditing_demo_src "${CMAKE_SOURCE_DIR}/demo/auditing_demo/auditing_demo.cpp")

link_directories(${POCO_LINK_DIR} ${OPENSSL_LINK_DIR}) #这一行要放到add_executable前面

# ===================== bucket_op_demo 可执行 =====================
add_executable(get_bucket_list_demo ${get_bucket_list_demo_src})
add_executable(delete_bucket_demo ${delete_bucket_demo_src})
add_executable(head_bucket_demo ${head_bucket_demo_src})
add_executable(put_bucket_demo ${put_bucket_demo_src})
add_executable(get_bucket_demo ${get_bucket_demo_src})
add_executable(bucket_versioning_demo ${bucket_versioning_demo_src})
add_executable(bucket_replication_demo ${bucket_replication_demo_src})
add_executable(bucket_lifecycle_demo ${bucket_lifecycle_demo_src})
add_executable(bucket_acl_demo ${bucket_acl_demo_src})
add_executable(bucket_policy_demo ${bucket_policy_demo_src})
add_executable(bucket_cors_demo ${bucket_cors_demo_src})
add_executable(bucket_logging_demo ${bucket_logging_demo_src})
add_executable(bucket_domain_demo ${bucket_domain_demo_src})
add_executable(bucket_website_demo ${bucket_website_demo_src})
add_executable(bucket_tagging_demo ${bucket_tagging_demo_src})
add_executable(bucket_inventory_demo ${bucket_inventory_demo_src})
add_executable(bucket_referer_demo ${bucket_referer_demo_src})
add_executable(bucket_location_demo ${bucket_location_demo_src})
add_executable(bucket_intelligent_tiering_demo ${bucket_intelligent_tiering_demo_src})

# ===================== object_op_demo 可执行 =====================
add_executable(put_object_demo ${put_object_demo_src})
add_executable(get_object_url_demo ${get_object_url_demo_src})
add_executable(head_object_demo ${head_object_demo_src})
add_executable(get_object_demo ${get_object_demo_src})
add_executable(delete_object_demo ${delete_object_demo_src})
add_executable(put_get_object_acl_demo ${put_get_object_acl_demo_src})
add_executable(put_get_delete_object_tagging_demo ${put_get_delete_object_tagging_demo_src})
add_executable(restore_object_demo ${restore_object_demo_src})
add_executable(copy_move_object_demo ${copy_move_object_demo_src})
add_executable(multi_put_object_demo ${multi_put_object_demo_src})
add_executable(multi_get_object_demo ${multi_get_object_demo_src})
add_executable(select_objec_demo ${select_objec_demo_src})
add_executable(multi_upload_object_demo ${multi_upload_object_demo_src})
add_executable(list_multipart_upload_demo ${list_multipart_upload_demo_src})
add_executable(limit_traffic_demo ${limit_traffic_demo_src})
add_executable(multi_upload_object_widechar_demo ${multi_upload_object_widechar_demo_src})

# ===================== 新增模块可执行 =====================
add_executable(live_channel_demo ${live_channel_demo_src})
add_executable(image_process_demo ${image_process_demo_src})
add_executable(doc_process_demo ${doc_process_demo_src})
add_executable(media_process_demo ${media_process_demo_src})
add_executable(data_process_demo ${data_process_demo_src})
add_executable(auditing_demo ${auditing_demo_src})

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

# ===================== target_link_libraries =====================
set(COS_DEMO_LIBS cossdk ${POCO_LIBS} ${OPENSSL_LIBS} ${SYSTEM_LIBS})

# bucket_op_demo
target_link_libraries(get_bucket_list_demo ${COS_DEMO_LIBS})
target_link_libraries(delete_bucket_demo ${COS_DEMO_LIBS})
target_link_libraries(head_bucket_demo ${COS_DEMO_LIBS})
target_link_libraries(put_bucket_demo ${COS_DEMO_LIBS})
target_link_libraries(get_bucket_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_versioning_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_replication_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_lifecycle_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_acl_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_policy_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_cors_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_logging_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_domain_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_website_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_tagging_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_inventory_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_referer_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_location_demo ${COS_DEMO_LIBS})
target_link_libraries(bucket_intelligent_tiering_demo ${COS_DEMO_LIBS})

# object_op_demo
target_link_libraries(put_object_demo ${COS_DEMO_LIBS})
target_link_libraries(get_object_url_demo ${COS_DEMO_LIBS})
target_link_libraries(head_object_demo ${COS_DEMO_LIBS})
target_link_libraries(get_object_demo ${COS_DEMO_LIBS})
target_link_libraries(delete_object_demo ${COS_DEMO_LIBS})
target_link_libraries(put_get_object_acl_demo ${COS_DEMO_LIBS})
target_link_libraries(put_get_delete_object_tagging_demo ${COS_DEMO_LIBS})
target_link_libraries(restore_object_demo ${COS_DEMO_LIBS})
target_link_libraries(copy_move_object_demo ${COS_DEMO_LIBS})
target_link_libraries(multi_put_object_demo ${COS_DEMO_LIBS})
target_link_libraries(multi_get_object_demo ${COS_DEMO_LIBS})
target_link_libraries(select_objec_demo ${COS_DEMO_LIBS})
target_link_libraries(multi_upload_object_demo ${COS_DEMO_LIBS})
target_link_libraries(list_multipart_upload_demo ${COS_DEMO_LIBS})
target_link_libraries(limit_traffic_demo ${COS_DEMO_LIBS})
target_link_libraries(multi_upload_object_widechar_demo ${COS_DEMO_LIBS})

# 新增模块
target_link_libraries(live_channel_demo ${COS_DEMO_LIBS})
target_link_libraries(image_process_demo ${COS_DEMO_LIBS})
target_link_libraries(doc_process_demo ${COS_DEMO_LIBS})
target_link_libraries(media_process_demo ${COS_DEMO_LIBS})
target_link_libraries(data_process_demo ${COS_DEMO_LIBS})
target_link_libraries(auditing_demo ${COS_DEMO_LIBS})

include_directories(${CMAKE_SOURCE_DIR}/include/ ${POCO_INCLUDE_DIR})

if(${OS_TYPE} STREQUAL "WINDOWS")
    file(GLOB poco_libs "${CMAKE_SOURCE_DIR}/third_party/lib/${BUILD_TARGET}/poco/*")
    file(GLOB ssl_libs "${CMAKE_SOURCE_DIR}/third_party/lib/${BUILD_TARGET}/openssl/*")
    file(COPY ${poco_libs}
            DESTINATION ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
    file(COPY ${ssl_libs}
            DESTINATION ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE})
endif()
